Add full page capture (HTML/CSS/JS/meta) and multi-file export

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@ browser-service/*.pyc
 *.py[cod]
 *$py.class
 
+# Generated analysis artifacts
+analysis_*.json
+checklist_*.csv
+page_copy_*.html
+screenshot_*.png
+
