--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -3,6 +3,7 @@ name: Deploy (PROD)
 on:
   push:
     branches: [main]
+  workflow_dispatch: {}
 
 concurrency:
   group: deploy-prod
@@ -11,6 +12,7 @@ concurrency:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: production
     permissions:
       contents: read
       id-token: write
@@ -36,6 +38,7 @@ jobs:
             --source . \
             --region "${{ secrets.GCP_REGION }}" \
             --allow-unauthenticated \
+            --service-account "${{ secrets.GCP_SA_EMAIL }}" \
             --set-env-vars "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}" \
             --timeout=600 \
             --memory=2Gi \
