--- a/web/package.json
+++ b/web/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.16",
+    "firebase-admin": "^13.5.0",
     "next": "16.0.6",
+    "next-auth": "^4.24.11",
     "openai": "^6.9.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
