feat: snapshot-first pipeline + GCS_BUCKET env

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -42,7 +42,7 @@ jobs:
             --region "${{ secrets.GCP_REGION }}" \
             --allow-unauthenticated \
             --service-account "${{ secrets.GCP_SA_EMAIL }}" \
-            --set-env-vars "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }},GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }},GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }},NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }},NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }},STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }},STRIPE_WEBHOOK_SECRET=${{ secrets.STRIPE_WEBHOOK_SECRET }},STRIPE_PRICE_STARTER=${{ secrets.STRIPE_PRICE_STARTER }},STRIPE_PRICE_PRO=${{ secrets.STRIPE_PRICE_PRO }},STRIPE_PRICE_METERED=${{ secrets.STRIPE_PRICE_METERED }},FIREBASE_SERVICE_ACCOUNT_BASE64=${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }}" \
+            --set-env-vars "OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }},GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }},GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }},NEXTAUTH_SECRET=${{ secrets.NEXTAUTH_SECRET }},NEXTAUTH_URL=${{ secrets.NEXTAUTH_URL }},STRIPE_SECRET_KEY=${{ secrets.STRIPE_SECRET_KEY }},STRIPE_WEBHOOK_SECRET=${{ secrets.STRIPE_WEBHOOK_SECRET }},STRIPE_PRICE_STARTER=${{ secrets.STRIPE_PRICE_STARTER }},STRIPE_PRICE_PRO=${{ secrets.STRIPE_PRICE_PRO }},STRIPE_PRICE_METERED=${{ secrets.STRIPE_PRICE_METERED }},FIREBASE_SERVICE_ACCOUNT_BASE64=${{ secrets.FIREBASE_SERVICE_ACCOUNT_BASE64 }},GCS_BUCKET=${{ secrets.GCS_BUCKET }}" \
             --timeout=600 \
             --memory=2Gi \
             --cpu=2 \
