--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,8 @@
     "openai": "^6.9.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "stripe": "^18.5.0"
   },
   "devDependencies": {
